fix capture.js width on mobiles

--- a/webrtc-capturestill/main.css
+++ b/webrtc-capturestill/main.css
@@ -1,14 +1,16 @@
 #video {
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
-  width:320px;
+  #width:320px;
+  width:170px;
   height:240px;
 }
 
 #photo {
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
-  width:320px;
+  #width:320px;
+  width:170px;
   height:240px;
 }
 
@@ -17,12 +19,14 @@
 }
 
 .camera {
-  width: 340px;
+  #width: 340px;
+  width: 170px;
   display:inline-block;
 }
 
 .output {
-  width: 340px;
+  #width: 340px;
+  width: 170px;
   display:inline-block;
 }
 
